Fix problem : invisible scrollbar

--- a/src/components/other/horizontal-scroll.module.css
+++ b/src/components/other/horizontal-scroll.module.css
@@ -16,14 +16,14 @@
 .scrollWrapper::-webkit-scrollbar-thumb {
   border: 6px solid transparent;
   background: var(--gtr-scroll-wrapper);
-  background: var(--gtr-palette-black-alpha-20, --scroll-wrapper);
+  /* background: var(--gtr-palette-black-alpha-20, --scroll-wrapper); */
   border-radius: 10px;
   background-clip: padding-box;
 }
 .scrollWrapper::-webkit-scrollbar-thumb:hover {
   border: 4px solid transparent;
   background: var(--gtr-scroll-wrapper-hover);
-  background: var(--gtr-palette-black-alpha-30, --scroll-wrapper-hover);
+  /* background: var(--gtr-palette-black-alpha-30, --scroll-wrapper-hover); */
   background-clip: padding-box;
 }
 @media only screen and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) {
